--- a/src/Components/DashBoard/SideBar.css
+++ b/src/Components/DashBoard/SideBar.css
@@ -7,46 +7,157 @@
     position: relative;
 }
 
-.sidebar{
-    margin-top: 76px;
-    height: 500px;
-    width: 200px;
-    position: static;
-    background: rgba(255, 255, 255, 0.7); /* semi-transparent background */
-    backdrop-filter: blur(10px); /* blur effect */
+
+.flatbar{
+    position: absolute;
+    height: 60px;
+    top: 0;
+    background: rgba(255, 255, 255, 0.7); 
+    backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px);
     display: flex;
-    justify-content: start;
-    padding-top: 20px; /* Or any desired padding */
+    justify-content: end;
+    align-items: center;
+    width:1129px;
+    margin-left: 0%;
+    left: 220px;
 }
 
-.sidebar ul{
-    list-style: none;
-    padding: 20px 30px;
+.flatbar #right{
+     margin-right:-73%;
+     margin-left: 83%;
+     display: flex;
+}
+.flatbar #right p{
+    position: absolute;
+}
+
+.flatbar #beside{
+    max-width: 10%;
+    margin-left: 78%;
+}
+
+
+.sidebar{
+    height: 600px;
+    width: 220px;
+    position: relative;
+    background: rgba(255, 255, 255, 0.7); 
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.compilogo{
+    width: 150px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -260px;
+    margin-bottom: 150px;
+}
+
+.compilogo img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.sidebar .dashy{
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  width:210px;
+  gap: 1px;
+  flex-direction: column;
+  list-style: none;
+  margin-top: -130px;
+}
+
+.sidebar .dashy .dashli{
+    font-size: 16px;
+    display: flex;
+    align-items: start;
+    margin-bottom: 20px;
+    text-decoration: none;
+    color: #000925;
+    margin-left: 0px;
+    padding: 0px 30px;
+    gap:10px;
+}
+
+.sidebar .dashy .dashli:hover{
+    color: #ff8800;
+}
+
+#toplet{
+    padding: 20px;
+    margin-left: 1px;
+    font-size: 15px;
+    color: #000925;
+}
+
+#upgra{
+    width: 220px;
+    padding: 2px;
+    border: 3px solid silver;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -220px;
+    margin-top: 220px;
+}
+
+#upgra:hover{
+    border: 3px solid #fa931d;
+}
+
+#upgra div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+#upgra div h3{
+    color: #000925;
+    font-size: 14px;
     margin-left: 0;
 }
 
-.sidebar ul li a{
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
+#upgra p{
+    color: rgb(70, 67, 67);
+    font-size: 13px;
+    padding: 2px 15px 5px 30px;
+}
+
+
+.sidebar #upgra{
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 0;
     color: #000925;
 }
 
 
 .topbar{
-    margin-left: 285px;
+    margin-left: 270px;
     width: 600px;
     height: 120px;
-    background: rgba(255, 255, 255, 0.7); /* semi-transparent background */
-    backdrop-filter: blur(10px); /* blur effect */
+    background: rgba(255, 255, 255, 0.7); 
+    backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     padding: 25px;
-    margin-top: -200px;
+    margin-top: -250px;
     position: relative;
 }
 
@@ -67,17 +178,62 @@
     column-gap: 50px;
     position: absolute;
     top: 300px;
-    left: 32%;
+    left: 29%;
 }
 
 #box{
-    width: 250px;
+    width: 280px;
     height: 250px;
-    background: rgba(255, 255, 255, 0.7); /* semi-transparent background */
-    backdrop-filter: blur(10px); /* blur effect */
+    background: rgba(255, 255, 255, 0.7); 
+    backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px);
     border-radius: 20px;
     display: flex;
     align-items: center;
+    box-shadow: 0 0 30px rgb(231, 152, 45);
+}
+
+#box:hover{
+    border: 5px solid #e7982d;
+    transition: border;
+}
+
+
+.allicon , .dash{
+    width:25px;
+    height:25px;
+}
+.allicon #das , .dash #das{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.allbox{
+    width:70px;
+    height:70px; 
+}
+
+.allbox #das{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+#box #opt {
+    text-decoration: none;
+    padding: 30px 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 25px;
+} 
+
+#box #opt p{
+    font-size: 22px;
+    text-align: center;
+    color: #000925;
+    font-weight: 590;
 }
 
