--- a/src/Components/DashBoard/Errorchecker.css
+++ b/src/Components/DashBoard/Errorchecker.css
@@ -13,26 +13,26 @@
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.8);
-  }
+}
 
 .errorcheck form {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-left: 0;
-  }
+}
 
-  .errorcheck .custom-file-upload{
-    height: 120px;
+.errorcheck .custom-file-upload {
+    height: 110px;
     width: 450px;
     border: 2px dashed royalblue;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .errorcheck #title {
+}
+
+.errorcheck #title {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,14 +42,13 @@
     margin-left: 0;
     font-weight: 550;
     color: #000925;
-  }
-  
-  .errorcheck #hov:hover {
-    color: royalblue /* change color on hover if desired */
-  }
-  
-  
-  .errorcheck textarea {
+}
+
+.errorcheck #hov:hover {
+    color: royalblue; /* change color on hover if desired */
+}
+
+.errorcheck #description {
     margin: 10px 0;
     padding: 10px;
     height: 90px;
@@ -58,11 +57,10 @@
     border-radius: 5px;
     color: black;
     font-size: 14px;
-  }
- 
-  
-  .errorcheck button {
-    padding: 10px 20px;
+}
+
+.errorcheck #newbut {
+    padding: 10px 15px;
     background-color: #000925;
     color: #fff;
     border: none;
@@ -70,12 +68,55 @@
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-top: 15px;
+    margin-top: 5px;
     margin-right: 0px;
-  }
-  
-  .errorcheck button:hover {
+
+}
+
+.errorcheck #newbut:hover {
     background-color: #ff8800; 
     border: 1px solid black;
-  }
-  
+}
+
+.uploaded-images {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: -5px;
+    margin-bottom: 10px;
+}
+
+.image-preview {
+    position: relative;
+    width: 100px;
+    height: 80px;
+    border: 2px solid royalblue;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.image-preview img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-preview button {
+    position: absolute;
+    top: -15px;
+    right: 0px;
+    background: #000925;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 5px;
+    color: white;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-preview button:hover {
+    background: #000925;
+}
