--- a/src/Components/DashBoard/Errorchecker.css
+++ b/src/Components/DashBoard/Errorchecker.css
@@ -57,6 +57,7 @@
     border-radius: 5px;
     color: black;
     font-size: 14px;
+    line-height: 1.3;
 }
 
 .errorcheck #newbut {
@@ -101,9 +102,9 @@
     object-fit: cover;
 }
 
-.image-preview button {
+.image-preview #buts {
     position: absolute;
-    top: -15px;
+    top: 0px;
     right: 0px;
     background: #000925;
     border: none;
