--- a/src/Components/DashBoard/Pre-process.css
+++ b/src/Components/DashBoard/Pre-process.css
@@ -180,6 +180,7 @@
     border-radius: 5px;
     color: black;
     font-size: 14px;
+    line-height: 1.3;
   }
 
   #option, #texti{
@@ -203,7 +204,7 @@
     height: auto; 
     top: 150px;
     width: 500px;
-    height: 512px;
+    height: 507px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.8);
     background: rgba(255, 255, 255, 0.7); 
     backdrop-filter: blur(10px); 
