--- a/src/Components/Home/Section2.css
+++ b/src/Components/Home/Section2.css
@@ -99,3 +99,50 @@
     transition: color ease-in 0.5s;
 }
 
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+    .section2 h1 {
+        width: 90%;
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .benefit {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        row-gap: 20px;
+        width: 100%;
+        padding: 0 10px;
+        margin-top: 50px;
+        margin-bottom: 40px;
+    }
+
+    #bene {
+        width: 90%;
+        height: auto;
+        padding: 20px 13px;
+        gap: 15px;
+    }
+
+    #bene h2 {
+        font-size: 18px;
+        width: 95%;
+    }
+
+    #bene p {
+        font-size: 14px;
+        line-height: 1.3;
+    }
+
+    .callbar {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .callbar li #call1,
+    .callbar li #call3 {
+        font-size: 14px;
+        padding: 8px 16px;
+        color: #000925;
+        font-weight: 500;
+    }
+}
