--- a/src/Main.css
+++ b/src/Main.css
@@ -23,3 +23,10 @@
   z-index: -1;
 }
 
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+  #background-video {
+    position: absolute;
+    width: 100%;
+    height: 780rem;
+  }
+}
