Progress on Day3

--- a/src/Components/DashBoard/Dashboard.css
+++ b/src/Components/DashBoard/Dashboard.css
@@ -4,3 +4,10 @@
     align-items: center;
     flex-direction: column;
 }
+
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+    .dashboard {
+      padding: 10px;
+    }
+  }
+  
