--- a/src/Components/Home/Section5.css
+++ b/src/Components/Home/Section5.css
@@ -92,3 +92,61 @@
     border-bottom-right-radius: 15px;
 }
 
+
+
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+    .section5 {
+        margin-bottom: 50px; /* Adjust as needed */
+    }
+
+    .section5 h1 {
+        font-size: 30px; /* Smaller font size */
+        margin-bottom: 30px; /* Reduced space */
+    }
+
+    .section5 p {
+        font-size: 14px; /* Smaller font size */
+        margin-top: -20px; /* Adjusted spacing */
+    }
+
+    .section5 #span {
+        font-size: 16px; /* Smaller font size */
+    }
+
+    .popdown {
+        margin-top: 20px; /* Reduced space */
+    }
+
+    #pops {
+        width: 95%; /* Full width for smaller screens */
+        margin-bottom: 10px; /* Reduced bottom margin */
+    }
+
+    #pops h3 {
+        font-size: 15px; /* Smaller font size */
+        padding: 15px 11px; /* Reduced padding */
+       text-align: start;
+       gap: 5px;
+       display: flex;
+       flex-direction: column;
+       justify-content: left;
+    }
+
+    #pops p {
+        font-size: 0.9em; /* Smaller font size */
+        padding: 15px; /* Reduced padding */
+    }
+
+    #down {
+        width:25px;
+        height: 20px;
+        margin-top: -25px;
+        margin-right: -10px;
+    }
+
+    #down img{
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+    }
+}
