--- a/src/Components/Home/Pricing.css
+++ b/src/Components/Home/Pricing.css
@@ -31,4 +31,28 @@
 }
 
 
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+    .allprices {
+      flex-direction: column;
+      padding: 0px;
+    }
+  
+    .price {
+      width: 98%;
+      padding: 20px;
+      height: auto;
+      margin-top: 100px;
+    }
+  
+    .price h1 {
+      font-size: 30px;
+      margin-bottom: 15px;
+    }
+  
+    .price p {
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+  }
+  
 
