--- a/src/Components/Home/Section6.css
+++ b/src/Components/Home/Section6.css
@@ -10,7 +10,7 @@
   backdrop-filter: blur(10px); /* blur effect */
   -webkit-backdrop-filter: blur(10px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 1348px;
+  width: 100%;
   height: 400px;
 }
 
@@ -63,6 +63,7 @@
 
 .feedback-right button:hover {
   background-color:  #ff8800;
+  border: 1px solid black;
 }
 
 .feedback-form-container p {
@@ -117,4 +118,65 @@
   padding:10px;
   color: black;
   margin-right: 30px;
+}
+
+
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+  .feedback-form-container {
+      width: 100%; /* Adjust to fit smaller screens */
+      height: auto; /* Allow height to adjust based on content */
+      padding: 10px;
+  }
+
+  .feedback-form {
+      flex-direction: column;
+      width: 100%;
+      height: auto;
+      padding: 12px;
+  }
+
+  .feedback-left, .feedback-right {
+      width: 100%;
+      margin-top: 10px;
+  }
+
+  .feedback-left textarea, .feedback-right input {
+      margin-bottom: 15px;
+  }
+
+  .feedback-right button {
+      margin-left: 12px;
+      width: 90%;
+      font-size: 16px;
+      margin-top: 2%;
+  }
+
+  .feedback-form-container p {
+      font-size: 0.9em;
+  }
+
+  .comment {
+      font-size: 30px; /* Smaller font size */
+      margin-bottom: 20px;
+  }
+
+  .left {
+      display: none;
+      margin-right: 0;
+      margin-left: 0;
+      margin-bottom: 20px; /* Add margin for spacing */
+  }
+
+  #feedback {
+      height: 100px; /* Adjusted height */
+      font-size: 14px;
+      margin-left: 0;
+      margin-bottom: 15px; /* Add margin for spacing */
+  }
+
+  #email {
+      width: 100%;
+      font-size: 14px;
+      margin-right: 0;
+  }
 }
