--- a/src/Components/Home/About.css
+++ b/src/Components/Home/About.css
@@ -1,3 +1,13 @@
+#background-video1 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+  }
+
 .about{
     display: flex;
     justify-content: center;
@@ -85,5 +95,11 @@
       margin-bottom: 5px;
       margin-left: 10px;
     }
+
+    #background-video1 {
+        position: absolute;
+        width: 100%;
+        height: 160em ;
+      }
   }
   
