--- a/src/Components/Home/Authentication.css
+++ b/src/Components/Home/Authentication.css
@@ -82,13 +82,28 @@
     background-color: #ff8800;
   }
   
+  #background-video2 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+  }
 
   @media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+    #background-video2 {
+      position: absolute;
+      width: 100%;
+      height: 50em ;
+    }
+    
     .auth {
       width: 90%;
       height: auto;
       padding: 15px;
-      margin-top: 80px;
+      margin-top: 100px;
     }
   
     .meanaslogo {
