--- a/src/Components/Home/Pricing.css
+++ b/src/Components/Home/Pricing.css
@@ -1,3 +1,14 @@
+#background-video3 {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+
 .allprices{
     display: flex;
     justify-content: center;
@@ -52,6 +63,12 @@
     .price p {
       font-size: 14px;
       margin-bottom: 20px;
+    }
+
+    #background-video3 {
+      position: absolute;
+      width: 100%;
+      height: 160em ;
     }
   }
   
