--- a/src/Components/Home/Navbar.css
+++ b/src/Components/Home/Navbar.css
@@ -9,7 +9,6 @@
     padding-bottom: -15px;
     gap: 50px;
     width: 1600px;
-    border-bottom: 1px solid silver;
     background: rgba(255, 255, 255, 0.3); /* semi-transparent background */
     backdrop-filter: blur(10px); /* blur effect */
     -webkit-backdrop-filter: blur(10px); /* Safari support */
@@ -123,7 +122,7 @@
         padding-top: 40px;
         height: 350px;
         position: static;
-        background: white;
+        background: #f0f0f0;
         box-shadow: none;
         width: 1200px;
         margin-left: -200px;
