--- a/src/Components/Home/Section6.css
+++ b/src/Components/Home/Section6.css
@@ -147,7 +147,7 @@
   .feedback-right button {
       margin-left: 12px;
       width: 90%;
-      font-size: 16px;
+      font-size: 15px;
       margin-top: 2%;
   }
 
@@ -171,7 +171,8 @@
       height: 100px; /* Adjusted height */
       font-size: 14px;
       margin-left: 0;
-      margin-bottom: 15px; /* Add margin for spacing */
+      margin-bottom: 15px; 
+      padding: 10px;
   }
 
   #email {
