--- a/src/Components/Home/Features.css
+++ b/src/Components/Home/Features.css
@@ -1,6 +1,15 @@
 
 .background #margin{
-    margin-top:20%;
-    margin-bottom: 20%;
+    margin-top:10%;
+    margin-bottom: 10%;
     position: relative;
+}
+
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+    .background #margin{
+        margin-top:35%;
+        margin-bottom: 10%;
+    }
+    
+    
 }
