--- a/src/Components/DashBoard/Errorchecker.css
+++ b/src/Components/DashBoard/Errorchecker.css
@@ -121,3 +121,74 @@
 .image-preview button:hover {
     background: #000925;
 }
+
+#err .report{
+    margin-top: -15px;
+}
+
+@media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
+    .errorcheck {
+      position: relative;
+      margin-left: 0.5em;
+      top: 2.5em;
+      width: calc(100% - 1em);
+      padding: 1em;
+      height: auto;
+      margin-bottom: 165%;
+    }
+
+    .errorcheck .custom-file-upload {
+        width: 100%;
+        height: 100px;
+    }
+
+    .errorcheck #title {
+        font-size: 14px;
+        margin-bottom: 5px;
+        margin-top: 5px;
+    }
+
+    .errorcheck #description {
+        width: 100%;
+        height: 120px;
+        font-size: 14px;
+    }
+
+    .errorcheck #newbut {
+        margin-left: 65px;
+        width: 70%;
+        font-size: 1em;
+    }
+
+    .uploaded-images {
+        gap: 5px;
+    }
+
+    .uploaded-images img{
+        max-width: 6em;
+        max-height: 5em;
+    }
+
+    .image-preview button{
+        width: 25px;
+        height:25px;
+    }
+
+    .image-preview {
+        width: 80px;
+        height: 60px;
+    }
+
+    .image-preview #buts {
+        padding: 3px;
+        font-size: 10px;
+    }
+
+    #err .response-container{
+        margin-top: -35%;
+    }
+
+    #err .report{
+        margin-top: -30%;
+    }
+}
