--- a/src/Components/Home/About.css
+++ b/src/Components/Home/About.css
@@ -1,4 +1,4 @@
-#background-video1 {
+#background-video {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -95,11 +95,5 @@
       margin-bottom: 5px;
       margin-left: 20px;
     }
-
-    #background-video1 {
-        position: absolute;
-        width: 100%;
-        height: 160em ;
-      }
   }
   
