--- a/src/Components/Home/Authentication.css
+++ b/src/Components/Home/Authentication.css
@@ -82,7 +82,7 @@
     background-color: #ff8800;
   }
   
-  #background-video2 {
+  #background-video {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -93,12 +93,6 @@
   }
 
   @media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
-    #background-video2 {
-      position: absolute;
-      width: 100%;
-      height: 50em ;
-    }
-    
     .auth {
       width: 90%;
       height: auto;
