--- a/src/Components/Home/Pricing.css
+++ b/src/Components/Home/Pricing.css
@@ -1,4 +1,4 @@
-#background-video3 {
+#background-video {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -63,12 +63,6 @@
     .price p {
       font-size: 14px;
       margin-bottom: 20px;
-    }
-
-    #background-video3 {
-      position: absolute;
-      width: 100%;
-      height: 160em ;
     }
   }
   
