--- a/src/Components/DashBoard/Pre-process.css
+++ b/src/Components/DashBoard/Pre-process.css
@@ -182,6 +182,10 @@
   line-height: 1.3;
 }
 
+#pre #option option:hover{
+    background-color: #032a9e;
+}
+
 #option, #texti {
   font-size: 0.875em;
   border: 0.15em solid royalblue;
@@ -235,6 +239,25 @@
   background-color: #ff8800;
   border: 0.0625em solid black;
 }
+
+.checkbox-group{
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: left;
+  align-items: start;
+  margin-left: 0%;
+  margin-top: 2%;
+}
+
+.checkbox-group label{
+  margin-left: 0%;
+}
+
+.checkbox-group label input{
+  margin-right: 10px;
+}
+
+
 
 @media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
   .current {
@@ -304,6 +327,7 @@
       top: 57em;
       width: calc(100% - 1em);
       height: 20em;
+      margin-top: 10em;
       margin-bottom: 150%;
   }
 
@@ -369,4 +393,3 @@
       width: 100%;
   }
 }
-
