--- a/src/Components/DashBoard/Errorchecker.css
+++ b/src/Components/DashBoard/Errorchecker.css
@@ -134,7 +134,23 @@
       width: calc(100% - 1em);
       padding: 1em;
       height: auto;
-      margin-bottom: 165%;
+      margin-bottom: 36em;
+    }
+    #err .response-container {
+        position: absolute;
+        margin-left: 0.5em;
+        width: calc(100% - 1em);
+        height: 25em;
+        margin-top: -20%;
+        margin-bottom: 0%;
+    }
+
+    #err .report {
+        font-size: 1em;
+        margin-left: 20%;
+        width: 60%;
+        position: absolute;
+        top: 80.3em;
     }
 
     .errorcheck .custom-file-upload {
@@ -155,7 +171,7 @@
     }
 
     .errorcheck #newbut {
-        margin-left: 65px;
+        margin-left: 0%;
         width: 70%;
         font-size: 1em;
     }
@@ -184,9 +200,6 @@
         font-size: 10px;
     }
 
-    #err .response-container{
-        margin-top: -35%;
-    }
 
     #err .report{
         margin-top: -30%;
