--- a/src/Components/DashBoard/Post-process.css
+++ b/src/Components/DashBoard/Post-process.css
@@ -1,10 +1,27 @@
 @media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
-    #err1 .response-container {
+    #err1 .errorcheck {
+        position: relative;
         margin-left: 0.5em;
-        top: 57em;
+        top: 2.5em;
         width: calc(100% - 1em);
-        height: 20em;
-        margin-top: 1em;
-        margin-bottom: 120%;
+        padding: 1em;
+        height: auto;
+        margin-bottom: 36em;
+    }
+
+    #err1 .response-container {
+        position: absolute;
+        margin-left: 0.5em;
+        width: calc(100% - 1em);
+        height: 24.5em;
+        margin-top: 5%;
+        margin-bottom: 0%;
+    }
+    #err1 .report {
+        font-size: 1em;
+        margin-left: 20%;
+        width: 60%;
+        position: absolute;
+        top: 79em;
     }
 }
