--- a/src/Components/DashBoard/Post-process.css
+++ b/src/Components/DashBoard/Post-process.css
@@ -14,7 +14,7 @@
         margin-left: 0.5em;
         width: calc(100% - 1em);
         height: 24.5em;
-        margin-top: 5%;
+        margin-top: 70%;
         margin-bottom: 0%;
     }
     #err1 .report {
@@ -22,6 +22,11 @@
         margin-left: 20%;
         width: 60%;
         position: absolute;
-        top: 79em;
+        top: 90em;
+    }
+
+    #err1 .checkbox-group label {
+        font-size: 15px;
+        text-align: left;
     }
 }
