--- a/src/Components/DashBoard/Defaultbars.css
+++ b/src/Components/DashBoard/Defaultbars.css
@@ -200,24 +200,26 @@
         -webkit-backdrop-filter: blur(10px);
         border-bottom: 1px solid rgba(255, 255, 255, 0.18);
         position: relative;
-        height: auto;
+        height: 4em;
+        justify-content: center;
+        align-items:center;
+        padding:0;
     }
-
     .dropdowns {
+        position:absolute;
         width: 100%;
         list-style: none;
         padding: 0;
         color: #000925;
+        margin-left:8%;
+        align-items: center;
+        margin-top:2%;
     }
 
     .dropbarps {
         cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         padding: 0px;
         width: 100%;
-        margin-left: -5%;
     }
 
     .dropdown-lists {
@@ -226,9 +228,10 @@
         flex-direction: column;
         position: absolute;
         background-color: #f0f0f0;
-        top: 65px;
+        top: 44px;
         width: 100%;
         z-index: 1000;
+        left:-4%;
     }
 
     .dropdown-lists li {
@@ -297,21 +300,24 @@
     }
 
     .compilogop {
-        display: block;
-        text-align: center;
-        margin: 15px 12px 15px 0px;
+        display: flex;
+        align-items: center;
+        width:10rem;
+        height:38px;
+        position: absolute;
+        margin-left:-17%;
     }
-
     .compilogop img {
-        width: 120px;
-        height: auto;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
     }
 
     .flatbarp {
         display: flex;
-        width: 100%;
-        position: relative;
-        gap: 5px;
+        position: absolute;
+        gap: 25px;
+        margin-left:65%;
     }
 
     .alliconp {
@@ -325,20 +331,16 @@
         height: 25px;
     }
 
-    #rightp, #besidep {
-        margin: 0 10px;
-    }
-
     .dropdown-menu {
         display: flex;
         justify-content: center;
         flex-direction: column;
         position: absolute;
         background-color: #f0f0f0;
-        top: 48px;
+        top: 45px;
         max-width: 50em;
         z-index: 1000;
-        right:-1.5em;
+        right:-1.8em;
     }
     
 }
