--- a/src/Components/DashBoard/SideBar.css
+++ b/src/Components/DashBoard/SideBar.css
@@ -265,6 +265,46 @@
     color:#ff8800
 }
 
+.access-denied {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    padding: 20px;
+    margin-top: 200px;
+  }
+  
+  .access-denied h1 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    color: #dc3545; /* Red color for emphasis */
+  }
+  
+  .access-denied p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    color: #000925;
+  }
+  
+  .access-denied a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff; /* Blue background */
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .access-denied a:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+  }
+
 
 @media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
     .fullbar {
@@ -331,5 +371,18 @@
         z-index: 1000;
         right:-0.8em;
     }
+
+    .access-denied h1 {
+        font-size: 2em;
+      }
+    
+      .access-denied p {
+        font-size: 1em;
+      }
+    
+      .access-denied a {
+        padding: 8px 16px;
+      }
+    
   }
   
