--- a/src/Components/DashBoard/Projects.css
+++ b/src/Components/DashBoard/Projects.css
@@ -1,13 +1,25 @@
-.project-page {
+/* Projects.css */
+
+.proj {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .project-page {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
-    font-family: Arial, sans-serif;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
   .project-page h2 {
     text-align: center;
     margin-bottom: 20px;
+    font-size: 24px;
   }
   
   .project-page p {
@@ -47,7 +59,7 @@
     margin-bottom: 10px;
   }
   
-  #load{
+  #load {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,35 +67,42 @@
     margin-top: 20%;
     color: #000925;
   }
-
-
-  @media all and (max-width: 430px), all and (max-width: 414px), all and (max-width: 375px) {
+ 
+  
+@media all and (max-width: 430px), 
+    all and (max-width: 414px), 
+    all and (max-width: 375px) {
     .project-page {
-      padding: 10px;
+      margin: 0px;
     }
-  
+
     .project-page h2 {
-      font-size: 20px;
+    font-size: 20px;
     }
-  
+
     .project-page p {
-      font-size: 14px;
+    font-size: 14px;
     }
-  
+
     .project-page .image-gallery {
-      gap: 5px;
+    flex-direction: column;
+    align-items: center;
     }
-  
+
     .project-page .image-gallery img {
-      max-width: 150px;
+    max-width: 100%;
     }
-  
+
     .project-page .responses h3 {
-      font-size: 16px;
+    font-size: 16px;
     }
-  
+
     .project-page .responses p {
-      font-size: 14px;
-      padding: 8px;
-    }  
-  }
+    font-size: 14px;
+    }
+
+    #load {
+    font-size: 24px;
+    margin-top: 30%;
+    }
+    }
