--- a/src/Components/DashBoard/Errorchecker.css
+++ b/src/Components/DashBoard/Errorchecker.css
@@ -116,6 +116,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 25px;
+    height: 25px;
+}
+
+.image-preview #buts:hover{
+    background-color: royalblue;
 }
 
 .image-preview button:hover {
@@ -141,7 +147,7 @@
         margin-left: 0.5em;
         width: calc(100% - 1em);
         height: 25em;
-        margin-top: -20%;
+        margin-top: 10%;
         margin-bottom: 0%;
     }
 
@@ -150,7 +156,7 @@
         margin-left: 20%;
         width: 60%;
         position: absolute;
-        top: 80.3em;
+        top: 85.3em;
     }
 
     .errorcheck .custom-file-upload {
