--- a/src/Components/Home/Section1.css
+++ b/src/Components/Home/Section1.css
@@ -7,7 +7,7 @@
 }
 
 .heading{
-    width: 600px;
+    width: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,9 +16,14 @@
     text-align: center;
 }
 
-.heading h1{
-    font-size: 43px;
+.heading h1, #tw{
+    font-size: 3.0em;
      color:#000925;
+}
+
+#tw{
+    font-size:1.0em;
+    color:#ff8800;
 }
 
 .heading p{
