--- a/src/Components/DashBoard/Profile.css
+++ b/src/Components/DashBoard/Profile.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: auto;
 }
 
 .profile {
@@ -43,23 +44,18 @@
     border-radius: 5px;
     font-size: 14px;
   }
-  
-  .profile-form button, .password-form button {
-    padding: 10px 15px;
-    background-color: #000925;
+ 
+  #proflog{
+    
+    align-self: flex-end; 
+    padding: 0.625em 1.25em;
+    font-size: 0.95em;
     color: white;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-
-  #relog{
-    width: 25%;
-  }
-  
-  .profile-form button:hover, .password-form button:hover {
-    background-color: #ff8800;
-    border: 2px solid black;
+    background-color: #000925;
+    border-radius: 0.625em;
+    border: 0.0625em solid black;
+    margin-top: 1%;
+    margin-bottom: 2%;
   }
   
 
