--- a/src/Components/Home/Section6.css
+++ b/src/Components/Home/Section6.css
@@ -67,7 +67,8 @@
 }
 
 .feedback-form-container p {
-  margin-top: 20px;
+  margin-top: -10px;
+  margin-bottom: 10px;
   font-size: 1em;
   color: green;
 }
